syntax = "proto3";
package client;

import "pqxdh/pb_signed_curve_prekey.proto";
import "pqxdh/pb_signed_pqkem_prekey.proto";
import "pqxdh/pb_one_time_curve_prekey_set.proto";
import "pqxdh/pb_signed_one_time_pqkem_prekey_set.proto";

message PBNewKeys {
    oneof new_keys {
        pqxdh.PBSignedCurvePrekey signed_curve_prekey = 1;
        pqxdh.PBSignedPQKEMPrekey signed_last_resort_pqkem_prekey = 2;
        pqxdh.PBOneTimeCurvePrekeySet one_time_curve_prekeys = 3;
        pqxdh.PBSignedOneTimePQKEMPrekeySet signed_one_time_pqkem_prekeys = 4;
    }
}